--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import {UserCard, AboutCard} from '../components/Card';
+import {UserCard, MemojiCard} from '../components/Card';
 ---
 
 <Layout title="David Ochoa | Web Developer">
@@ -17,7 +17,7 @@ import {UserCard, AboutCard} from '../components/Card';
 	<main class="p-4 flex flex-col gap-4 mt-24 lg:p-8">
 		<div class="flex flex-col lg:flex-nowrap lg:flex-row gap-4 lg:gap-8">
 			<UserCard/>
-			<AboutCard client:load/>
+			<MemojiCard client:load/>
 		</div>
 	</main>
 	<footer>
