--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,7 +17,7 @@ import {UserCard, MemojiCard} from '../components/Card';
 	<main class="p-4 flex flex-col gap-4 mt-24 lg:p-8">
 		<div class="flex flex-col lg:flex-nowrap lg:flex-row gap-4 lg:gap-8">
 			<UserCard/>
-			<MemojiCard client:load/>
+			<MemojiCard client:idle/>
 		</div>
 	</main>
 	<footer>
