--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,6 +13,7 @@ const { title } = Astro.props;
 		<meta name="description" content="Astro description">
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/png" href="/img/favicon-32x32.png" sizes="32x32"/>
+		<meta http-equiv="Permissions-Policy" content="interest-cohort=()">
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
