--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -12,7 +12,7 @@ const { title } = Astro.props;
 		<meta charset="UTF-8" />
 		<meta name="description" content="Astro description">
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32"/>
+		<link rel="icon" type="image/png" href="favicon-32x32.png?" sizes="32x32"/>
 		<meta http-equiv="Permissions-Policy" content="interest-cohort=()">
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
