--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import {UserCard, MemojiCard} from '../components/Card';
+import {UserCard, MemojiCard, SocialCard} from '../components/Card';
 ---
 
 <Layout title="David Ochoa | Web Developer">
@@ -15,9 +15,12 @@ import {UserCard, MemojiCard} from '../components/Card';
 		</ul>
 	</header>
 	<main class="p-4 flex flex-col gap-4 mt-24 lg:p-8">
-		<div class="flex flex-col lg:flex-nowrap lg:flex-row gap-4 lg:gap-8">
+		<div class="flex flex-col lg:flex-nowrap lg:flex-row gap-4 lg:gap-8 justify-center">
 			<UserCard/>
 			<MemojiCard client:idle/>
+		</div>
+		<div class="flex flex-col lg:flex-nowrap lg:flex-row gap-4 lg:gap-8 justify-center">
+			<SocialCard />
 		</div>
 	</main>
 	<footer>
