--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,7 +20,7 @@ import {UserCard, MemojiCard, SocialCard, ReadCvCard, LookingCard} from '../comp
 			<MemojiCard client:idle/>
 		</div>
 		<div class="flex flex-row flex-wrap lg:flex-nowrap lg:flex-row gap-4 lg:gap-8 justify-center">
-			<LookingCard />
+			<LookingCard client:idle/>
 			<SocialCard />
 			<ReadCvCard />
 		</div>
