✅ Feat: Created dotlottie import

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,7 +26,7 @@ import { Works } from '../components/Works';
 			<ReadCvCard />
 		</div>
 		<div>
-			<Works client:idle/>
+			<Works client:only/>
 		</div>
 	</main>
 	<footer>
