--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ import { Works } from '../components/Works';
 			<li>Contacts</li>
 		</ul>
 	</header>
-	<main class="p-4 flex flex-col gap-4 mt-24 lg:p-8 lg:gap-8">
+	<main class="p-4 flex flex-col gap-4 mt-24 lg:p-8 lg:gap-8 lg:px-24">
 		<div class="flex flex-col lg:flex-nowrap lg:flex-row gap-4 lg:gap-8 justify-center">
 			<UserCard/>
 			<MemojiCard client:idle/>
@@ -25,7 +25,7 @@ import { Works } from '../components/Works';
 			<SocialCard />
 			<ReadCvCard />
 		</div>
-		<div>
+		<div class="flex justify-center">
 			<Works client:only/>
 		</div>
 	</main>
