🛠 Fix: Fix of pagination styling

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,7 +26,7 @@ import { Works } from '../components/Works';
 			<ReadCvCard />
 		</div>
 		<div class="flex justify-center">
-			<Works client:only/>
+			<Works client:idle/>
 		</div>
 	</main>
 	<footer>
