--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import Footer from '../components/Footer.astro';
 export interface Props {
 	title: string;
 }
@@ -10,14 +11,28 @@ const { title } = Astro.props;
 <html lang="en" class="scroll-smooth">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description">
+		<meta name="description" content="Astro description" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/png" href="favicon-32x32.png?" sizes="32x32"/>
-		<meta http-equiv="Permissions-Policy" content="interest-cohort=()">
+		<link rel="icon" type="image/png" href="favicon-32x32.png?" sizes="32x32" />
+		<meta http-equiv="Permissions-Policy" content="interest-cohort=()" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
 	<body class="bg-slate-950">
 		<slot />
+		<Footer />
+		<!-- BUY ME A COFFEE SCRIPT -->
+		<script
+			is:inline
+			data-name="BMC-Widget"
+			data-cfasync="false"
+			src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js"
+			data-id="davidochoadev"
+			data-description="Support me on Buy me a coffee!"
+			data-message="Made with ❤️ and ☕️"
+			data-color="#40DCA5"
+			data-position="Right"
+			data-x_margin="18"
+			data-y_margin="18"></script>
 	</body>
 </html>
