--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,20 +3,20 @@
 ---
 
 <footer class="w-full bg-slate-900 h-full p-8 border-t border-slate-800">
-   <p class="font-mono text-xl text-slate-300">Built with: </p>
-   <div class="flex flex-row gap-4">
+   <p class="font-mono text-md text-slate-300">Built with: </p>
+   <div class="flex flex-row gap-4 py-4">
       <a href="https://astro.build/" target="_blank">
-         <img src="./svg/astro.svg" alt="astro" width="50px"/>
+         <img src="./svg/astro.svg" alt="astro" width="32px"/>
       </a>
       <a href="https://www.typescriptlang.org/" target="_blank">
-         <img src="./svg/typescript.svg" alt="typescript" width="50px"/>
+         <img src="./svg/typescript.svg" alt="typescript" width="32px"/>
       </a>
       <a href="https://react.dev/" target="_blank">
-         <img src="./svg/react.svg" alt="react" width="50px"/>
+         <img src="./svg/react.svg" alt="react" width="32px"/>
       </a>
       <a href="https://tailwindcss.com/" target="_blank">
-         <img src="./svg/tailwind.svg" alt="TailwindCSS" width="50px"/>
+         <img src="./svg/tailwind.svg" alt="TailwindCSS" width="32px"/>
       </a>
    </div>
-   <p>Deploy on Github Pages</p>
+   <p class="text-slate-300 text-sm">Deploy with Github Pages</p>
 </footer>
