🛠 Fix: Changed txt color on footer

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,7 @@
 ---
 
 <footer class="w-full bg-slate-900 h-full p-8 border-t border-slate-800">
-   <p class="font-mono text-md text-slate-300">Built with: </p>
+   <p class="font-mono text-sm text-slate-500">Built with: </p>
    <div class="flex flex-row gap-4 py-4">
       <a href="https://astro.build/" target="_blank">
          <img src="./svg/astro.svg" alt="astro" width="32px"/>
@@ -18,5 +18,5 @@
          <img src="./svg/tailwind.svg" alt="TailwindCSS" width="32px"/>
       </a>
    </div>
-   <p class="text-slate-300 text-sm">Deploy with Github Pages</p>
+   <p class="text-slate-500 text-sm">Deploy with Github Pages</p>
 </footer>
