✏️ Refactoring: Changed style on footer, created hover animation

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,16 +5,16 @@
 <footer class="w-full bg-slate-900 h-full p-8 border-t border-slate-800">
    <p class="font-mono text-sm text-slate-500">Built with: </p>
    <div class="flex flex-row gap-4 py-4">
-      <a href="https://astro.build/" target="_blank">
+      <a href="https://astro.build/" target="_blank" class="hover:scale-110 transition-all duration-300">
          <img src="./svg/astro.svg" alt="astro" width="32px"/>
       </a>
-      <a href="https://www.typescriptlang.org/" target="_blank">
+      <a href="https://www.typescriptlang.org/" target="_blank"  class="hover:scale-110 transition-all duration-300">
          <img src="./svg/typescript.svg" alt="typescript" width="32px"/>
       </a>
-      <a href="https://react.dev/" target="_blank">
+      <a href="https://react.dev/" target="_blank"  class="hover:scale-110 transition-all duration-300">
          <img src="./svg/react.svg" alt="react" width="32px"/>
       </a>
-      <a href="https://tailwindcss.com/" target="_blank">
+      <a href="https://tailwindcss.com/" target="_blank"  class="hover:scale-110 transition-all duration-300">
          <img src="./svg/tailwind.svg" alt="TailwindCSS" width="32px"/>
       </a>
    </div>
