--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -26,5 +26,5 @@
          <svg viewBox="0 0 24 24" class="w-8 group-hover:fill-emerald-500 duration-300 transition-all" astro-icon="simple-icons:tailwindcss"><path d="M12.001 4.8c-3.2 0-5.2 1.6-6 4.8 1.2-1.6 2.6-2.2 4.2-1.8.913.228 1.565.89 2.288 1.624C13.666 10.618 15.027 12 18.001 12c3.2 0 5.2-1.6 6-4.8-1.2 1.6-2.6 2.2-4.2 1.8-.913-.228-1.565-.89-2.288-1.624C16.337 6.182 14.976 4.8 12.001 4.8zm-6 7.2c-3.2 0-5.2 1.6-6 4.8 1.2-1.6 2.6-2.2 4.2-1.8.913.228 1.565.89 2.288 1.624 1.177 1.194 2.538 2.576 5.512 2.576 3.2 0 5.2-1.6 6-4.8-1.2 1.6-2.6 2.2-4.2 1.8-.913-.228-1.565-.89-2.288-1.624C10.337 13.382 8.976 12 6.001 12z"></path></svg>
       </a>
    </div>
-   <p class="text-slate-500 text-sm">Deploy with Github Pages</p>
+   <p class="text-slate-500 text-sm font-mono">Deploy with Github Pages</p>
 </footer>
