🛠 Fix: Fixed accesibility for svg elements

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,14 +5,14 @@ import { Works } from '../components/Works';
 ---
 
 <Layout title="David Ochoa | Web Developer">
-	<header class="flex flex-row p-4 backdrop-blur-sm py-10 fixed top-0 z-10 w-full bg-opacity-50 bg-slate-950 lg:px-36" >
+	<header class="flex flex-row p-4 backdrop-blur-sm py-10 fixed top-0 z-10 w-full bg-opacity-70 bg-slate-900 lg:px-36" >
 		<div class="flex justify-center items-center w-full md:justify-start font-mono">
 			<h1 class="text-xl text-white">davidochoa<strong class="uppercase text-slate-500">{'.<dev>'} </strong></h1>
 		</div>
 		<ul class="hidden md:flex md:flex-row md:gap-4 md:flex-grow md:items-center md:justify-end text-[#33ddb3] font-mono">
-			<a href="#about" class="hover:text-[#9bffe6] hover:font-bold transition duration-300 ease-in-out"><li>About</li></a>
-			<a href="#contacts" class="hover:text-[#9bffe6] hover:font-bold transition duration-300 ease-in-out"><li>Contacts</li></a>
-			<a href="#projects" class="hover:text-[#9bffe6] hover:font-bold transition duration-300 ease-in-out"><li>Projects</li></a>
+			<a href="#about" class="hover:text-[#9bffe6] hover:font-bold transition duration-300 ease-in-out">About</a>
+			<a href="#contacts" class="hover:text-[#9bffe6] hover:font-bold transition duration-300 ease-in-out">Contacts</a>
+			<a href="#projects" class="hover:text-[#9bffe6] hover:font-bold transition duration-300 ease-in-out">Projects</a>
 		</ul>
 	</header>
 	<main class="p-4 flex flex-col gap-4 mt-24 lg:p-8 lg:gap-8 lg:px-24 scroll-mt-24" id="about">
