🛠 Fix: Fixed Accesibility for buttons on works.tsx

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,11 +9,11 @@ import { Works } from '../components/Works';
 		<div class="flex justify-center items-center w-full md:justify-start font-mono">
 			<h1 class="text-xl text-white">davidochoa<strong class="uppercase text-slate-500">{'.<dev>'} </strong></h1>
 		</div>
-		<ul class="hidden md:flex md:flex-row md:gap-4 md:flex-grow md:items-center md:justify-end text-[#33ddb3] font-mono">
+		<div class="hidden md:flex md:flex-row md:gap-4 md:flex-grow md:items-center md:justify-end text-[#33ddb3] font-mono">
 			<a href="#about" class="hover:text-[#9bffe6] hover:font-bold transition duration-300 ease-in-out">About</a>
 			<a href="#contacts" class="hover:text-[#9bffe6] hover:font-bold transition duration-300 ease-in-out">Contacts</a>
 			<a href="#projects" class="hover:text-[#9bffe6] hover:font-bold transition duration-300 ease-in-out">Projects</a>
-		</ul>
+		</div>
 	</header>
 	<main class="p-4 flex flex-col gap-4 mt-24 lg:p-8 lg:gap-8 lg:px-24 scroll-mt-24" id="about">
 		<div class="flex flex-col lg:flex-nowrap lg:flex-row gap-4 lg:gap-8 justify-center">
