--- a/src/components/Stack.astro
+++ b/src/components/Stack.astro
@@ -14,18 +14,54 @@
       </p>
    </div>
    <div class="flex flex-row gap-4 py-4">
-      <a href="" target="_blank" class="group transition-all duration-300 first:fill-slate-400 hover:scale-125" aria-label="Visit HTML5 Documentation">
+      <a
+         href=""
+         target="_blank"
+         class="group transition-all duration-300 first:fill-slate-400 hover:scale-125"
+         aria-label="Visit Github"
+      >
          <svg
-      fill="currentColor"
-      viewBox="0 0 16 16"
-      height="38px"
-      width="38px"
-      class="transition-all fill-slate-400 duration-300 group-hover:fill-emerald-500"
-    >
-      <path class="fill-slate-400 group-hover:fill-emerald-500" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0016 8c0-4.42-3.58-8-8-8z" />
-    </svg>
+            fill="currentColor"
+            viewBox="0 0 16 16"
+            height="38px"
+            width="38px"
+            class="fill-slate-400 transition-all duration-300 group-hover:fill-emerald-500"
+         >
+            <path
+               class="fill-slate-400 group-hover:fill-emerald-500"
+               d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0016 8c0-4.42-3.58-8-8-8z"
+            ></path>
+         </svg>
       </a>
-      <a href="" target="_blank" class="group transition-all duration-300 first:fill-slate-400 hover:scale-125" aria-label="Visit HTML5 Documentation">
+      <a
+         href=""
+         target="_blank"
+         class="group transition-all duration-300 first:fill-slate-400 hover:scale-125"
+         aria-label="Visit Cloudflare Pages"
+      >
+         <svg viewBox="0 0 24 24" fill="currentColor" height="38px" width="38px">
+            <path
+               class="fill-slate-400 group-hover:fill-emerald-500"
+               d="M10.715 14.32H5.442l-.64-1.203L13.673 0l1.397.579-1.752 9.112h5.24l.648 1.192L10.719 24l-1.412-.54zM4.091 5.448a.579.579 0 110-1.157.579.579 0 010 1.157zm1.543 0a.579.579 0 110-1.157.579.579 0 010 1.157zm1.544 0a.579.579 0 110-1.157.579.579 0 010 1.157zm8.657-2.7h5.424l.772.771v16.975l-.772.772h-7.392l.374-.579h6.779l.432-.432V3.758l-.432-.432h-4.676l-.552 2.85h-.59l.529-2.877.108-.552zM2.74 21.265l-.772-.772V3.518l.772-.771h7.677l-.386.579H2.98l-.432.432v16.496l.432.432h5.586l-.092.579zm1.157-1.93h3.28l-.116.58h-3.55l-.192-.193v-3.473l.578 1.158zm13.117 0l.579.58H14.7l.385-.58z"
+            ></path>
+         </svg>
+      </a>
+      <a
+         href=""
+         target="_blank"
+         class="group transition-all duration-300 first:fill-slate-400 hover:scale-125"
+         aria-label="Visit Vercel"
+      >
+         <svg viewBox="0 0 512 512" fill="currentColor" height="38px" width="38px">
+            <path class="fill-slate-400 group-hover:fill-emerald-500" fill-rule="evenodd" d="M256 48l240 416H16z"></path>
+         </svg>
+      </a>
+      <a
+         href=""
+         target="_blank"
+         class="group transition-all duration-300 first:fill-slate-400 hover:scale-125"
+         aria-label="Visit HTML5 Documentation"
+      >
          <svg
             aria-hidden="true"
             focusable="false"
@@ -33,7 +69,7 @@
             fill="currentColor"
             height="38px"
             width="38px"
-            class="transition-all fill-slate-400 duration-300 group-hover:fill-emerald-500"
+            class="fill-slate-400 transition-all duration-300 group-hover:fill-emerald-500"
          >
             <path
                class="fill-slate-400 group-hover:fill-emerald-500"
@@ -41,20 +77,25 @@
             ></path>
          </svg>
       </a>
-      <a href="" target="_blank" class="group transition-all duration-300 first:fill-slate-400 hover:scale-125" aria-label="Visit CSS3 Documentation">
-         <svg
-         aria-hidden="true"
-         focusable="false"
-         viewBox="0 0 32 32"
-         class="fill-slate-400 group-hover:fill-emerald-500"
-         height="38px"
-         width="38px"
+      <a
+         href=""
+         target="_blank"
+         class="group transition-all duration-300 first:fill-slate-400 hover:scale-125"
+         aria-label="Visit CSS3 Documentation"
       >
-         <path
+         <svg
+            aria-hidden="true"
+            focusable="false"
+            viewBox="0 0 32 32"
             class="fill-slate-400 group-hover:fill-emerald-500"
-            d="M16.017 21.044zM4.743 3.519L6.792 26.5l9.194 2.552 9.22-2.556 2.051-22.977H4.743zM23 8.775l-.693 7.767-.48 5.359-.042.476-5.781 1.603-5.773-1.603-.395-4.426h2.829l.201 2.248 3.142.847.008-.002h.002l3.134-.846.329-3.655h-6.579l-.056-.633-.129-1.429-.067-.756h7.081l.258-2.886H9.203l-.056-.634-.129-1.429-.067-.756h14.118l-.068.756z"
-         />
-      </svg>
+            height="38px"
+            width="38px"
+         >
+            <path
+               class="fill-slate-400 group-hover:fill-emerald-500"
+               d="M16.017 21.044zM4.743 3.519L6.792 26.5l9.194 2.552 9.22-2.556 2.051-22.977H4.743zM23 8.775l-.693 7.767-.48 5.359-.042.476-5.781 1.603-5.773-1.603-.395-4.426h2.829l.201 2.248 3.142.847.008-.002h.002l3.134-.846.329-3.655h-6.579l-.056-.633-.129-1.429-.067-.756h7.081l.258-2.886H9.203l-.056-.634-.129-1.429-.067-.756h14.118l-.068.756z"
+            ></path>
+         </svg>
       </a>
       <a
          href="https://astro.build/"
@@ -68,24 +109,31 @@
             viewBox="0 0 24 24"
             width="38px"
             height="38px"
-            class="w-8 transition-all fill-slate-400 duration-300 group-hover:fill-emerald-500"
+            class="w-8 fill-slate-400 transition-all duration-300 group-hover:fill-emerald-500"
             astro-icon="simple-icons:astro"
             ><path
                d="M16.074 16.86c-.72.616-2.157 1.035-3.812 1.035-2.032 0-3.735-.632-4.187-1.483-.161.488-.198 1.046-.198 1.402 0 0-.106 1.75 1.111 2.968 0-.632.513-1.145 1.145-1.145 1.083 0 1.082.945 1.081 1.712v.069c0 1.164.711 2.161 1.723 2.582a2.347 2.347 0 0 1-.236-1.029c0-1.11.652-1.523 1.41-2.003.602-.383 1.272-.807 1.733-1.66a3.129 3.129 0 0 0 .378-1.494 3.14 3.14 0 0 0-.148-.954zM15.551.6c.196.244.296.572.496 1.229l4.368 14.347a18.18 18.18 0 0 0-5.222-1.768L12.35 4.8a.37.37 0 0 0-.71.002l-2.81 9.603a18.175 18.175 0 0 0-5.245 1.771L7.974 1.827c.2-.656.3-.984.497-1.227a1.613 1.613 0 0 1 .654-.484C9.415 0 9.757 0 10.443 0h3.135c.686 0 1.03 0 1.32.117A1.614 1.614 0 0 1 15.55.6z"
             ></path></svg
          >
       </a>
-      <a href="" target="_blank" class="group transition-all duration-300 first:fill-slate-400 hover:scale-125" aria-label="Visit JavaScript Documentation">
-         <svg
-         aria-hidden="true"
-         focusable="false"
-         viewBox="0 0 24 24"
-         class="w-8 fill-slate-400 group-hover:fill-emerald-500"
-         height="32px"
-         width="32px"
+      <a
+         href=""
+         target="_blank"
+         class="group transition-all duration-300 first:fill-slate-400 hover:scale-125"
+         aria-label="Visit JavaScript Documentation"
       >
-         <path d="M0 0h24v24H0V0zm22.034 18.276c-.175-1.095-.888-2.015-3.003-2.873-.736-.345-1.554-.585-1.797-1.14-.091-.33-.105-.51-.046-.705.15-.646.915-.84 1.515-.66.39.12.75.42.976.9 1.034-.676 1.034-.676 1.755-1.125-.27-.42-.404-.601-.586-.78-.63-.705-1.469-1.065-2.834-1.034l-.705.089c-.676.165-1.32.525-1.71 1.005-1.14 1.291-.811 3.541.569 4.471 1.365 1.02 3.361 1.244 3.616 2.205.24 1.17-.87 1.545-1.966 1.41-.811-.18-1.26-.586-1.755-1.336l-1.83 1.051c.21.48.45.689.81 1.109 1.74 1.756 6.09 1.666 6.871-1.004.029-.09.24-.705.074-1.65l.046.067zm-8.983-7.245h-2.248c0 1.938-.009 3.864-.009 5.805 0 1.232.063 2.363-.138 2.711-.33.689-1.18.601-1.566.48-.396-.196-.597-.466-.83-.855-.063-.105-.11-.196-.127-.196l-1.825 1.125c.305.63.75 1.172 1.324 1.517.855.51 2.004.675 3.207.405.783-.226 1.458-.691 1.811-1.411.51-.93.402-2.07.397-3.346.012-2.054 0-4.109 0-6.179l.004-.056z" />
-      </svg>
+         <svg
+            aria-hidden="true"
+            focusable="false"
+            viewBox="0 0 24 24"
+            class="w-8 fill-slate-400 group-hover:fill-emerald-500"
+            height="32px"
+            width="32px"
+         >
+            <path
+               d="M0 0h24v24H0V0zm22.034 18.276c-.175-1.095-.888-2.015-3.003-2.873-.736-.345-1.554-.585-1.797-1.14-.091-.33-.105-.51-.046-.705.15-.646.915-.84 1.515-.66.39.12.75.42.976.9 1.034-.676 1.034-.676 1.755-1.125-.27-.42-.404-.601-.586-.78-.63-.705-1.469-1.065-2.834-1.034l-.705.089c-.676.165-1.32.525-1.71 1.005-1.14 1.291-.811 3.541.569 4.471 1.365 1.02 3.361 1.244 3.616 2.205.24 1.17-.87 1.545-1.966 1.41-.811-.18-1.26-.586-1.755-1.336l-1.83 1.051c.21.48.45.689.81 1.109 1.74 1.756 6.09 1.666 6.871-1.004.029-.09.24-.705.074-1.65l.046.067zm-8.983-7.245h-2.248c0 1.938-.009 3.864-.009 5.805 0 1.232.063 2.363-.138 2.711-.33.689-1.18.601-1.566.48-.396-.196-.597-.466-.83-.855-.063-.105-.11-.196-.127-.196l-1.825 1.125c.305.63.75 1.172 1.324 1.517.855.51 2.004.675 3.207.405.783-.226 1.458-.691 1.811-1.411.51-.93.402-2.07.397-3.346.012-2.054 0-4.109 0-6.179l.004-.056z"
+            ></path>
+         </svg>
       </a>
       <a
          href="https://www.typescriptlang.org/"
