✅ Feat: Added prisma to my stack in 2023

--- a/src/components/Stack.astro
+++ b/src/components/Stack.astro
@@ -21,6 +21,8 @@
          aria-label="Visit Github"
       >
          <svg
+            aria-hidden="true"
+            focusable="false"
             fill="currentColor"
             viewBox="0 0 16 16"
             height="38px"
@@ -39,7 +41,14 @@
          class="group transition-all duration-300 first:fill-slate-400 hover:scale-125"
          aria-label="Visit Cloudflare Pages"
       >
-         <svg viewBox="0 0 24 24" fill="currentColor" height="38px" width="38px">
+         <svg
+            aria-hidden="true"
+            focusable="false"
+            viewBox="0 0 24 24"
+            fill="currentColor"
+            height="38px"
+            width="38px"
+         >
             <path
                class="fill-slate-400 group-hover:fill-emerald-500"
                d="M10.715 14.32H5.442l-.64-1.203L13.673 0l1.397.579-1.752 9.112h5.24l.648 1.192L10.719 24l-1.412-.54zM4.091 5.448a.579.579 0 110-1.157.579.579 0 010 1.157zm1.543 0a.579.579 0 110-1.157.579.579 0 010 1.157zm1.544 0a.579.579 0 110-1.157.579.579 0 010 1.157zm8.657-2.7h5.424l.772.771v16.975l-.772.772h-7.392l.374-.579h6.779l.432-.432V3.758l-.432-.432h-4.676l-.552 2.85h-.59l.529-2.877.108-.552zM2.74 21.265l-.772-.772V3.518l.772-.771h7.677l-.386.579H2.98l-.432.432v16.496l.432.432h5.586l-.092.579zm1.157-1.93h3.28l-.116.58h-3.55l-.192-.193v-3.473l.578 1.158zm13.117 0l.579.58H14.7l.385-.58z"
@@ -52,8 +61,18 @@
          class="group transition-all duration-300 first:fill-slate-400 hover:scale-125"
          aria-label="Visit Vercel"
       >
-         <svg viewBox="0 0 512 512" fill="currentColor" height="38px" width="38px">
-            <path class="fill-slate-400 group-hover:fill-emerald-500" fill-rule="evenodd" d="M256 48l240 416H16z"></path>
+         <svg
+            aria-hidden="true"
+            focusable="false"
+            viewBox="0 0 512 512"
+            fill="currentColor"
+            height="38px"
+            width="38px"
+         >
+            <path
+               class="fill-slate-400 group-hover:fill-emerald-500"
+               fill-rule="evenodd"
+               d="M256 48l240 416H16z"></path>
          </svg>
       </a>
       <a
@@ -155,6 +174,26 @@
                d="M87.7 200.7V217h52v148h36.9V217h52v-16c0-9 0-16.3-.4-16.5 0-.3-31.7-.4-70.2-.4l-70 .3v16.4l-.3-.1zM321.4 184c10.2 2.4 18 7 25 14.3 3.7 4 9.2 11 9.6 12.8 0 .6-17.3 12.3-27.8 18.8-.4.3-2-1.4-3.6-4-5.2-7.4-10.5-10.6-18.8-11.2-12-.8-20 5.5-20 16 0 3.2.6 5 1.8 7.6 2.7 5.5 7.7 8.8 23.2 15.6 28.6 12.3 41 20.4 48.5 32 8.5 13 10.4 33.4 4.7 48.7-6.4 16.7-22 28-44.3 31.7-7 1.2-23 1-30.5-.3-16-3-31.3-11-40.7-21.3-3.7-4-10.8-14.7-10.4-15.4l3.8-2.4 15-8.7 11.3-6.6 2.6 3.5c3.3 5.2 10.7 12.2 15 14.6 13 6.7 30.4 5.8 39-2 3.7-3.4 5.3-7 5.3-12 0-4.6-.7-6.7-3-10.2-3.2-4.4-9.6-8-27.6-16-20.7-8.8-29.5-14.4-37.7-23-4.7-5.2-9-13.3-11-20-1.5-5.8-2-20-.6-25.7 4.3-20 19.4-34 41-38 7-1.4 23.5-.8 30.4 1l-.2.2z"
             ></path></svg
          >
+      </a>
+      <a
+         href="https://www.prisma.io/"
+         target="_blank"
+         class="group transition-all duration-300 hover:scale-125"
+         aria-label="Visit Prisma's website"
+      >
+         <svg
+            aria-hidden="true"
+            focusable="false"
+            viewBox="0 0 24 24"
+            fill="currentColor"
+            height="38px"
+            width="38px"
+         >
+            <path
+            class="fill-slate-400 transition-all duration-300 group-hover:fill-emerald-500"
+               d="M21.807 18.285L13.553.756a1.324 1.324 0 00-1.129-.754 1.31 1.31 0 00-1.206.626l-8.952 14.5a1.356 1.356 0 00.016 1.455l4.376 6.778a1.408 1.408 0 001.58.581l12.703-3.757c.389-.115.707-.39.873-.755s.164-.783-.007-1.145zm-1.848.752L9.18 22.224a.452.452 0 01-.575-.52l3.85-18.438c.072-.345.549-.4.699-.08l7.129 15.138a.515.515 0 01-.325.713z"
+            ></path>
+         </svg>
       </a>
       <a
          href="https://react.dev/"
