--- a/src/components/Stack.astro
+++ b/src/components/Stack.astro
@@ -15,7 +15,7 @@
    </div>
    <div class="flex flex-row gap-4 py-4">
       <a
-         href=""
+         href="https://github.com/"
          target="_blank"
          class="group transition-all duration-300 first:fill-slate-400 hover:scale-125"
          aria-label="Visit Github"
@@ -36,7 +36,7 @@
          </svg>
       </a>
       <a
-         href=""
+         href="https://pages.cloudflare.com/"
          target="_blank"
          class="group transition-all duration-300 first:fill-slate-400 hover:scale-125"
          aria-label="Visit Cloudflare Pages"
@@ -56,7 +56,7 @@
          </svg>
       </a>
       <a
-         href=""
+         href="https://vercel.com"
          target="_blank"
          class="group transition-all duration-300 first:fill-slate-400 hover:scale-125"
          aria-label="Visit Vercel"
@@ -76,7 +76,7 @@
          </svg>
       </a>
       <a
-         href=""
+         href="https://developer.mozilla.org/en-US/docs/Glossary/HTML5"
          target="_blank"
          class="group transition-all duration-300 first:fill-slate-400 hover:scale-125"
          aria-label="Visit HTML5 Documentation"
@@ -136,7 +136,7 @@
          >
       </a>
       <a
-         href=""
+         href="https://developer.mozilla.org/en-US/"
          target="_blank"
          class="group transition-all duration-300 first:fill-slate-400 hover:scale-125"
          aria-label="Visit JavaScript Documentation"
@@ -190,7 +190,7 @@
             width="38px"
          >
             <path
-            class="fill-slate-400 transition-all duration-300 group-hover:fill-emerald-500"
+               class="fill-slate-400 transition-all duration-300 group-hover:fill-emerald-500"
                d="M21.807 18.285L13.553.756a1.324 1.324 0 00-1.129-.754 1.31 1.31 0 00-1.206.626l-8.952 14.5a1.356 1.356 0 00.016 1.455l4.376 6.778a1.408 1.408 0 001.58.581l12.703-3.757c.389-.115.707-.39.873-.755s.164-.783-.007-1.145zm-1.848.752L9.18 22.224a.452.452 0 01-.575-.52l3.85-18.438c.072-.345.549-.4.699-.08l7.129 15.138a.515.515 0 01-.325.713z"
             ></path>
          </svg>
