--- a/src/components/Stack.astro
+++ b/src/components/Stack.astro
@@ -13,7 +13,7 @@
          I highly prefer to use.
       </p>
    </div>
-   <div class="flex flex-row gap-4 py-4 flex-wrap">
+   <div class="flex flex-row gap-4 p-10 flex-wrap justify-center">
       <a
          href="https://github.com/"
          target="_blank"
