Fixing anchors on stack

--- a/src/components/Stack.astro
+++ b/src/components/Stack.astro
@@ -97,7 +97,7 @@
          </svg>
       </a>
       <a
-         href=""
+         href="https://developer.mozilla.org/en-US/docs/Web/CSS"
          target="_blank"
          class="group transition-all duration-300 first:fill-slate-400 hover:scale-125"
          aria-label="Visit CSS3 Documentation"
