--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,20 +12,11 @@ import readcv from "../assets/readcv.svg";
 import frontendmentor from "../assets/frontendmentor.webp";
 import { Image } from "astro:assets";
 import { ContraButton, FiverrButton } from '../components/Buttons';
+import Header from '../components/Header.astro';
 ---
 
 <Layout title="David Ochoa | Web Developer">
-	<header class="flex flex-row p-4 backdrop-blur-sm py-10 fixed top-0 z-10 w-full bg-opacity-70 bg-slate-900 lg:px-36" >
-		<div class="flex justify-center items-center w-full md:justify-start font-mono">
-			<h1 class="text-xl text-white">davidochoa<strong class="uppercase text-slate-500">{'.<dev>'} </strong></h1>
-		</div>
-		<div class="hidden md:flex md:flex-row md:gap-4 md:flex-grow md:items-center md:justify-end text-[#33ddb3] font-mono">
-			<a href="#about" class="hover:text-[#9bffe6] hover:font-bold transition duration-300 ease-in-out">About</a>
-			<a href="#contacts" class="hover:text-[#9bffe6] hover:font-bold transition duration-300 ease-in-out">Contacts</a>
-			<a href="#projects" class="hover:text-[#9bffe6] hover:font-bold transition duration-300 ease-in-out">Projects</a>
-			<a href="#stack" class="hover:text-[#9bffe6] hover:font-bold transition duration-300 ease-in-out">Stack</a>
-		</div>
-	</header>
+	<Header />
 	<main class="p-4 flex flex-col gap-4 mt-24 lg:p-8 lg:gap-8 lg:px-24 scroll-mt-24" id="about">
 		<div class="flex flex-col lg:flex-nowrap lg:flex-row gap-4 lg:gap-8 justify-center">
 			<div class=" min-h-[300px] flex flex-row flex-wrap items-center gap-5 rounded-xl shadow-[inset_4px_4px_10px_rgba(255,255,255,.2)] bg-gradient-to-tl from-slate-950 via-slate-900 to-[#05604b] p-4 backdrop-blur-xl lg:w-2/3 lg:rounded-3xl lg:rounded-br lg:rounded-tl lg:p-14 hover:rounded-br-3xl hover:rounded-tl-3xl tranistion-all duration-300 hover:scale-105 ease-in-out">
