--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,6 +17,15 @@ const { title } = Astro.props;
 		<meta http-equiv="Permissions-Policy" content="interest-cohort=()" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
+		<!-- Google tag (gtag.js) -->
+			<script type="text/partytown" async src="https://www.googletagmanager.com/gtag/js?id=G-PSM0VRQ3Y7"></script>
+			<script type="text/partytown">
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
+
+			gtag('config', 'G-PSM0VRQ3Y7');
+			</script>
 	</head>
 	<body class="bg-slate-950">
 		<slot />
