--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import Footer from '../components/Footer.astro';
+import Header from '../components/Header.astro';
 export interface Props {
 	title: string;
 }
@@ -28,6 +29,7 @@ const { title } = Astro.props;
 			</script>
 	</head>
 	<body class="bg-slate-950">
+		<Header />
 		<slot />
 		<Footer />
 		<!-- BUY ME A COFFEE SCRIPT -->
